# low-latency-matching-engine

./: .gitignore  CMakeLists.txt  README.md
V1/: CMakeLists.txt
V1/src/: OrderBookV1.cpp  OrderBookV1.h  Types.h  main.cpp
V3/: CMakeLists.txt
V3/src/: HP_Types.h  OrderBookV3.cpp  OrderBookV3.h  main.cpp
V4/: CMakeLists.txt
V4/src/: ObjectPool.h  OrderBookV4.cpp  OrderBookV4.h  main_fast.cpp
V6/: CMakeLists.txt
V6/src/: OrderBookV6.cpp  OrderBookV6.h  main_fast_v6.cpp
scripts/: generate_data_dense.py  generate_data_sparse.py
